// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select Component > Rendering > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  Small
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
  Default
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
  Large
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
</div>
`;

exports[`Select Component > Rendering > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  Default
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
  Destructive
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
  Outline
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
  Secondary
  <select
    aria-hidden="true"
    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    tabindex="-1"
  >
    <option
      value=""
    />
  </select>
</div>
`;

exports[`Select Component > Rendering > Snapshots > matches default snapshot 1`] = `Default`;

exports[`Select Component > Rendering > Snapshots > matches disabled state snapshot 1`] = `Disabled`;

exports[`Select Component > Rendering > Snapshots > matches loading state snapshot 1`] = `Loading`;
